--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:/data/demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
 
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=false
+
+pokemon.url=https://pokeapi.co/api/v2/pokemon
+
+logging.level.io.cherrytechnologies =debug
