--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
-spring.datasource.url=jdbc:h2:file:/data/demo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+#spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=user
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db
+spring.datasource.username=user
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.h2.console.path=/h2-console
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=false
 
 pokemon.url=https://pokeapi.co/api/v2/pokemon
+
+cache.pokemon.web=pokemon-form-web
+cache.pokemon.web.without_exception=pokemon-form-web-without-exception
+cache.pokemon.db=pokemon-from-db
+cache.pokemon.list.db=pokemon-list-from-db
 
 logging.level.io.cherrytechnologies =debug
