--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_pokemon
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.h2.console.path=/h2-console
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=false
 
